--- a/www/templates/format-text-view.html
+++ b/www/templates/format-text-view.html
@@ -1,3 +1,9 @@
-{{formattext[0]}}
-<br>
-{{formattext[1]}}
+<div class="formattext">
+	<p class="h1">
+		{{title}}
+	</p>
+    <p ng-repeat="linea in inspiration">
+        {{linea}}
+        <br>
+    </p>
+</div>
